grammar.txt
program        -> statement* EOF ;
declaration    -> varDecl | statement ;
statement      -> exprStmt | forStmt | ifStmt | printStmt | whileStmt | block ;
block          -> "{" declaration* "}" ;
exprStmt       -> expression ";" ;
forStmt        -> "for" "(" (varDecl | exprStmt | ";" ) expression? ";" expression? ")" statement ;
ifStmt         -> "if" "(" expression ")" statement ( "else" statement )? ;
printStmt      -> "print" expression ";" ;
whileStmt      -> "while" "(" expression ")" statement ;
// comma          → expression ( "," expression )* ;
varDecl        -> "var" IDENTIFIER ( "=" expression )? ";" ;
arguments      -> expression ("," expression)* ;
expression     → assignment ;
assignment     -> IDENTIFIER "=" assignment | logic_or ;
logic_or       -> logic_and ( "or" logic_and )* ;
logic_and      -> equality ( "and" equality )* ;
equality       → comparison ( ( "!=" | "==" ) comparison )* ;
ternary        → comparsion ( "?" (ternary | comparison) ":" (ternary | comparison))* ;
comparison     → term ( ( ">" | ">=" | "<" | "<=" ) term )* ;
term           → factor ( ( "-" | "+" ) factor )* ;
factor         → unary ( ( "/" | "*" ) unary )* ;
unary          → ( "!" | "-" ) unary
               | primary ;
call           -> primary ( "(" arguments? ")" )* ;
primary        → NUMBER | STRING | "true" | "false" | "nil"
               | "(" expression ")"  | IDENTIFIER;
               
